flask-demo-app-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo-app-deployment
spec:
  selector:
    matchLabels:
      app: flask-demo-app
  template:
    metadata:
      labels:
        app: flask-demo-app
    spec:
      containers:
        - image: 2kunal6/test-images:tagname
          name: test-image-name
