flask-demo-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo-app-service
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000
  selector:
    app: flask-demo-app
  type: NodePort
