flask-demo-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-dem-dem-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: xyzjusttesting.com   # Replace with your domain or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-demo-app-service
                port:
                  number: 8081
